--- a/TestingApi/TestingApi/TestingApi.csproj
+++ b/TestingApi/TestingApi/TestingApi.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <UserSecretsId>1e323665-51f4-4bee-90a5-e85ce34aa411</UserSecretsId>
+    <UserSecretsID>1e323665-51f4-4bee-90a5-e85ce34aa411</UserSecretsID>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
